--- a/Wip/Documents/java-s/GUIPrototype/OrganisationDetail.html
+++ b/Wip/Documents/java-s/GUIPrototype/OrganisationDetail.html
@@ -15,13 +15,7 @@
 <form>
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tr>
-    <td width="5%"><a href="#tab1">Detail 1</a></td>
-    <td width="5%"><a href="#tab2">Detail 2</a></td>
-    <td width="5%"><a href="#tab3">Detail 3</a></td>
-    <td width="5%"><a href="#tab4">Detail 4</a></td>
-	<td width="5%"><a href="#tab5">Detail 5</a></td>
-	<td width="5%"><a href="#tab6">BU/Directorates</a></td>
-    <td width="62%">&nbsp;</td>
+    <td><a href="#tab1">Detail 1</a><a href="#tab2">Detail 2</a><a href="#tab3">Detail 3</a><a href="#tab4">Detail 4</a><a href="#tab5">Detail 5</a><a href="#tab6">BU/Directorates</a></td>
     <td width="6%"><label>
       <input type="submit" name="Submit" value="  In-active  " />
     </label></td>
