--- a/trunk/Wip/Documents/java-s/GUIPrototype/BuDirectorateDetail.html
+++ b/trunk/Wip/Documents/java-s/GUIPrototype/BuDirectorateDetail.html
@@ -35,9 +35,7 @@
 <form>
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tr>
-    <td width="4%"><a href="#tab1">Detail</a></td>
-    <td width="6%"><a href="#tab2">Department</a></td>
-    <td width="82%">&nbsp;</td>
+    <td><a href="#tab1">Detail</a><a href="#tab2">Department</a></td>
     <td width="6%">
 	<label>
       <input type="submit" name="Submit" value="  In-active  " />
