--- a/Wip/Documents/java-s/GUIPrototype/BuDirectorateDetail.html
+++ b/Wip/Documents/java-s/GUIPrototype/BuDirectorateDetail.html
@@ -4,32 +4,11 @@
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <title>Untitled Document</title>
 <link href="css.css" rel="stylesheet" type="text/css" />
-
-<style type="text/css">
-<!--
-.style1 {color: #009900}
--->
-</style>
-<style type="text/css">
-<!--
-.style1 {
-	color: #009900;
-	font-weight: bold;
-	font-size: 24px;
-}
-.style2 {color: #33CCFF}
-.style3 {
-	font-size: 14px;
-	font-weight: bold;
-	color: #0066FF;
-}
--->
-</style>
 </head>
 
 <body>
 <a href="OrganisationDetail.html">Organisation</a> &gt; 
-<h3 class="style1 style1">Business Unit/Directorate Details </h3>
+<span class="title">Business Unit/Directorate Details </span>
 <br />
 <div id="bar">
 <form>
@@ -58,21 +37,21 @@
   <form id="form1" name="form1" method="post" action="">
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tr>
-    <td colspan="6" style="border-left:1px solid #999999; border-right:1px solid #999999; border-top:1px solid #999999;">&nbsp;</td>
+    <td colspan="6"class="top">&nbsp;</td>
   </tr>
   <tr>
-    <td width="1%" rowspan="12" style="border-left:1px solid #999999;">&nbsp;</td>
-    <td width="15%">Bu/Directorate Name <span class="style1">*</span></td>
+    <td width="1%" rowspan="13" class="left">&nbsp;</td>
+    <td width="15%">Bu/Directorate Name <span class="title">*</span></td>
     <td width="35%"><label>
       <input type="text" name="textfield" />
     </label></td>
-    <td>Type of Business <span class="style1">*</span></td>
+    <td>Type of Business <span class="title">*</span></td>
     <td><input type="text" name="textfield32" disabled="disabled" />
-        <span class="style2">Lookup</span> </td>
-    <td width="1%" rowspan="12" style="border-right: 1px solid #999999;">&nbsp;</td>
+        <span class="number">Lookup</span> </td>
+    <td width="1%" rowspan="13" class="right">&nbsp;</td>
   </tr>
   <tr>
-    <td rowspan="2">Bu/Directorate Short Description <span class="style1">*</span></td>
+    <td rowspan="2">Bu/Directorate Short Description <span class="title">*</span></td>
     <td rowspan="2"><label>
       <textarea name="textarea"></textarea>
     </label></td>
@@ -88,15 +67,15 @@
   <tr>
     <td>Lead Contact </td>
     <td><input type="text" name="textfield3" disabled="disabled" />
-      <span class="style2">Lookup</span> </td>
+      <span class="number">Lookup</span> </td>
     </tr>
 	<tr>
 	<td colspan="2"><input type="checkbox" name="checkbox2" value="checkbox" />	   Copy Address from Organisation </td>
-    <td>Phone Number <span class="style1">*</span></td>
+    <td>Phone Number <span class="title">*</span></td>
     <td><input type="text" name="textfield222" /></td>
 	</tr>
   <tr>
-    <td>Address Line 1 <span class="style1">*</span></td>
+    <td>Address Line 1 <span class="title">*</span></td>
     <td><input type="text" name="textfield22" /></td>
     <td>Fax</td>
     <td><input type="text" name="textfield223" /></td>
@@ -114,9 +93,9 @@
     <td><input type="text" name="textfield225" /></td>
   </tr>
   <tr>
-    <td>Postcode <span class="style1">*</span></td>
+    <td>Postcode <span class="title">*</span></td>
     <td><input type="text" name="textfield25" />
-      <span class="style2">Lookup</span></td>
+      <span class="number">Lookup</span></td>
     <td>Charity Number </td>
     <td><input type="text" name="textfield226" /></td>
   </tr>
@@ -150,7 +129,7 @@
     <td>&nbsp;</td>
   </tr>
   <tr>
-    <td colspan="6" style="border-bottom:1px solid #999999; border-left: 1px solid #999999; border-right: 1px solid #999999;">&nbsp;</td>
+    <td colspan="6" class="bottom">&nbsp;</td>
   </tr>
 </table>
 </form>
@@ -161,34 +140,34 @@
  <form id="form1" name="form1" method="post" action="">
 <table width="100%" border="0" cellspacing="0" cellpadding="0" bgcolor="#EFEFEF">
   <tr>
-    <td colspan="7" style="border-left:1px solid #999999; border-right:1px solid #999999; border-top:1px solid #999999;">&nbsp;</td>
+    <td colspan="7" class="top">&nbsp;</td>
   </tr>
   <tr>
-    <td width="2%" rowspan="3" style="border-left: 1px solid #999999;">&nbsp;</td>
-    <td colspan="3"><span class="style3"><a href="#" >All</a> | <a href="#">0-9</a> | <a href="#">A B C D E</a> | <a href="#">F G H I J</a> | <a href="#">K L M N</a> | <a href="#">O P R Q </a>| <a href="#">S T U V</a> | <a href="#">W X Y Z </a></span></td>
+    <td width="2%" rowspan="3" class="left">&nbsp;</td>
+    <td colspan="3"><span class="filter"><a href="#" >All</a> | <a href="#">0-9</a> | <a href="#">A B C D E</a> | <a href="#">F G H I J</a> | <a href="#">K L M N</a> | <a href="#">O P R Q </a>| <a href="#">S T U V</a> | <a href="#">W X Y Z </a></span></td>
     <td colspan="2" align="right"><label>
       <input name="create" type="submit" id="create" value="Create" />
     </label>      <label>
       <input type="checkbox" name="checkbox" value="checkbox" />
       Include In-active</label></td>
-    <td width="2%" rowspan="3" style=" border-right:1px solid #999999;">&nbsp;</td>
+    <td width="2%" rowspan="3" class="right">&nbsp;</td>
   </tr>
   <tr>
-    <td width="19%" style=" border:1px solid #999999;" background="picture/tab.jpg"><strong>Department Name </strong></td>
-    <td width="31%" style=" border:1px solid #999999;" background="picture/tab.jpg"><strong>Address Line 1 </strong></td>
-    <td width="10%" style=" border:1px solid #999999;" background="picture/tab.jpg"><strong>Postcode</strong></td>
-    <td width="26%" style=" border:1px solid #999999;" background="picture/tab.jpg"><strong>Contact</strong></td>
-    <td width="10%" style=" border:1px solid #999999;" background="picture/tab.jpg"><strong>Is Active? </strong></td>
+    <td width="19%" class="titleColumn"><strong>Department Name </strong></td>
+    <td width="31%" class="titleColumn"><strong>Address Line 1 </strong></td>
+    <td width="10%" class="titleColumn"><strong>Postcode</strong></td>
+    <td width="26%" class="titleColumn"><strong>Contact</strong></td>
+    <td width="10%" class="titleColumn"><strong>Is Active? </strong></td>
   </tr>
   <tr >
-    <td style="border:1px solid #999999;"><span class="style2">1</span></td>
-    <td style="border:1px solid #999999;">10 Maurer Court Greenwich Line 1 </td>
-    <td style="border:1px solid #999999;">SE10 0SS </td>
-    <td style="border:1px solid #999999;">Isax NewTon </td>
-    <td style="border:1px solid #999999;">Yes</td>
+    <td class="border"><span class="number">1</span></td>
+    <td class="border">10 Maurer Court Greenwich Line 1 </td>
+    <td class="border">SE10 0SS </td>
+    <td class="border">Isax NewTon </td>
+    <td class="border">Yes</td>
   </tr>
   <tr>
-    <td colspan="7" style="border-bottom: 1px solid #999999; border-left:1px solid #999999; border-right:1px solid #999999;">&nbsp;</td>
+    <td colspan="7" class="bottom">&nbsp;</td>
   </tr>
 </table>
 </form>
