--- a/Wip/Documents/java-s/GUIPrototype/SupportingMaterialDetail.html
+++ b/Wip/Documents/java-s/GUIPrototype/SupportingMaterialDetail.html
@@ -4,32 +4,11 @@
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <title>Untitled Document</title>
 <link href="css.css" rel="stylesheet" type="text/css" />
-
-<style type="text/css">
-<!--
-.style1 {color: #009900}
--->
-</style>
-<style type="text/css">
-<!--
-.style1 {
-	color: #009900;
-	font-weight: bold;
-	font-size: 24px;
-}
-.style2 {color: #33CCFF}
-.style3 {
-	font-size: 14px;
-	font-weight: bold;
-	color: #0066FF;
-}
--->
-</style>
 </head>
 
 <body>
 <a href="OrganisationDetail.html">Organisation</a> &gt;
-<h3 class="style1 style1">Supporting Materials  Details </h3>
+<h3 class="title">Supporting Materials  Details </h3>
 <br />
 <div id="bar">
 <form>
@@ -52,41 +31,40 @@
 <div class="maintab">
 
 <form id="form1" name="form1" method="post" action="">
-<table width="100%" border="0" cellspacing="0" cellpadding="0">
-  <tr>
-    <td colspan="7" style="border-left:1px solid #999999; border-right:1px solid #999999; border-top:1px solid #999999;">&nbsp;</td>
-  </tr>
-  <tr>
-    <td width="1%" rowspan="12" style="border-left:1px solid #999999;">&nbsp;</td>
-    <td width="15%">Url<span class="style1">*</span></td>
-    <td width="35%" colspan="2"><label>
-      <input type="text" name="textfield" />
-    </label></td>
-    <td>Added By <span class="style1">*</span></td>
-    <td><input name="textfield32" type="text" disabled="enabled" value="Van Vu" /></td>
-    <td width="1%" rowspan="12" style="border-right: 1px solid #999999;">&nbsp;</td>
-  </tr>
-  <tr>
-    <td rowspan="2">Description <span class="style1">*</span></td>
-    <td colspan="2" rowspan="2"><label>
-      <textarea name="textarea"></textarea>
-    </label></td>
-    <td>Added Date  </td>
-    <td><input name="textfield33" type="text" disabled="disabled" value="14/03/2012"></td>
-  </tr>
-  <tr>    
-  </tr>
-  <tr>
-    <td>Type</td>
-    <td colspan="2"><select name="select2">
-      <option>pdf</option>
-    </select></td>
+  <table width="100%" border="0" cellspacing="0" cellpadding="0">
+    <tr>
+      <td colspan="7" class="top">&nbsp;</td>
     </tr>
-	<tr>
-  <tr>
-    <td colspan="7" style="border-bottom:1px solid #999999; border-left: 1px solid #999999; border-right: 1px solid #999999;">&nbsp;</td>
-  </tr>
-</table>
+    <tr>
+      <td width="3%" rowspan="4" class="left">&nbsp;</td>
+      <td width="12%">Url<span class="title">*</span></td>
+      <td colspan="2"><label>
+        <input type="text" name="textfield" />
+      </label></td>
+      <td width="16%">Added By <span class="title">*</span></td>
+      <td width="31%"><input name="textfield32" type="text" disabled="enabled" value="Van Vu" /></td>
+      <td width="2%" rowspan="4" class="right">&nbsp;</td>
+    </tr>
+    <tr>
+      <td rowspan="2">Description <span class="title">*</span></td>
+      <td colspan="2" rowspan="2"><label>
+        <textarea name="textarea"></textarea>
+      </label></td>
+      <td height="36">Added Date </td>
+      <td><input name="textfield33" type="text" disabled="disabled" value="14/03/2012" /></td>
+    </tr>
+    <tr> </tr>
+    <tr>
+      <td height="26">Type</td>
+      <td colspan="2"><select name="select2">
+          <option>pdf</option>
+      </select></td>
+    </tr>
+    <tr> </tr>
+    <tr>
+      <td colspan="7" class="bottom">&nbsp;</td>
+    </tr>
+  </table>
 </form>
 </body>
 </html>
